// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadialProgress renders with defaultProps 1`] = `
<svg
  className="lorem ax-radial-progress ax-radial-progress--small"
  style={Object {}}
  viewBox="0 0 75 75"
>
  <g
    transform="translate(37.5, 37.5) rotate(-90)"
  >
    <svg />
  </g>
</svg>
`;

exports[`RadialProgress renders with size large 1`] = `
<svg
  className="lorem ax-radial-progress ax-radial-progress--large"
  style={Object {}}
  viewBox="0 0 75 75"
>
  <g
    transform="translate(37.5, 37.5) rotate(-90)"
  >
    <svg />
  </g>
</svg>
`;

exports[`RadialProgress renders with size medium 1`] = `
<svg
  className="lorem ax-radial-progress ax-radial-progress--medium"
  style={Object {}}
  viewBox="0 0 75 75"
>
  <g
    transform="translate(37.5, 37.5) rotate(-90)"
  >
    <svg />
  </g>
</svg>
`;

exports[`RadialProgress renders with size small 1`] = `
<svg
  className="lorem ax-radial-progress ax-radial-progress--small"
  style={Object {}}
  viewBox="0 0 75 75"
>
  <g
    transform="translate(37.5, 37.5) rotate(-90)"
  >
    <svg />
  </g>
</svg>
`;
